Upplägg 2019 beviljade projekt

--- a/projekt/2019-16.html
+++ b/projekt/2019-16.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2019-16
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	The influence of rainfall patterns and intensity on nitrogen mineralization from organic soil amendments
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Kehinde Olajide Erinle
+	
 	
 	</td>
 </tr>
@@ -80,19 +82,19 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
-				
+	  	School of Agric, Food and Wine | Soil Science<br>
+		Room 308, Prescott Building<br>
+		Waite Campus<br>
+		Glen Osmond SA 5064<br>
+		Australien		
 	  </td>
 </tr>
 <tr>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		kehinde.erinle@adelaide.edu.au
+
 	
 	</td>
 </tr>
@@ -100,7 +102,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+61449792468
+
 	
 	</td>
 </tr>
@@ -108,7 +111,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		The University of Adelaide
+
 	
 	</td>
 </tr>
@@ -116,7 +120,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 390 000
 	
 	 kr</td>
 </tr>
@@ -124,20 +128,16 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+
+
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-16/2019-16PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
-	  
+
 
 
 
