--- a/projekt/2019-37.html
+++ b/projekt/2019-37.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2019-37
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Utvärderig av stabila kväve-isotoper i blodplasma som biomarkör för konsumtion av ekologisk mat
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Axel Mie
 	
 	</td>
 </tr>
@@ -80,10 +80,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  	Södersjukhuset, forskningscentrum Jägargatan <br>
+		118 83 Stockholm
 				
 				
 	  </td>
@@ -92,7 +90,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		axel.mie@ki.se
 	
 	</td>
 </tr>
@@ -100,7 +98,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		08-6163952
 	
 	</td>
 </tr>
@@ -108,7 +106,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Karolinska institutet
 	
 	</td>
 </tr>
@@ -116,29 +114,20 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
-	
+		1 210 000
 	 kr</td>
 </tr>
 <tr>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-37/2019-37PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
-</table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
 </table>
-	  
-
 
 
 <!-- Loptext slut -->
