--- a/projekt/2019-49.html
+++ b/projekt/2019-49.html
@@ -33,8 +33,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
-
- |--Diarienummer--|
+2019-49
  
   </font></p></td>
 </tr>
@@ -60,7 +59,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Seaweed, a superfood for the growing population- improving the bioavailability of healthy ingredients
 	
 	</td>
 </tr>
@@ -72,7 +71,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Susan Løvstad Holdt
 	
 	</td>
 </tr>
@@ -80,11 +79,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Kemitorvet 204<br>
+		DK-2800 Kgs. Lyngby<br>
+		Danmark
 				
 	  </td>
 </tr>
@@ -92,7 +89,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		suho@food.dtu.dk
 	
 	</td>
 </tr>
@@ -100,7 +97,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+45 93 51 89 22
 	
 	</td>
 </tr>
@@ -108,7 +105,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		DTU Fødevareinstituttet
 	
 	</td>
 </tr>
@@ -116,7 +113,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 350 000
 	
 	 kr</td>
 </tr>
@@ -124,19 +121,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-49/2019-49PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
 	  
 
 
