--- a/projekt/2019-62.html
+++ b/projekt/2019-62.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2019-62
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Öronakupunktur som tillägg vid behandling av ångestsymptom inom affektiv psykiatrisk öppenvård
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Lena Bergdahl
 	
 	</td>
 </tr>
@@ -80,10 +80,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  	Institutionen för neurovetenskap, psykiatri<br>
+		751 85 Uppsala
 				
 				
 	  </td>
@@ -92,7 +90,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		lena.bergdahl@neuro.uu.se
 	
 	</td>
 </tr>
@@ -100,7 +98,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		076 847 41 02
 	
 	</td>
 </tr>
@@ -108,7 +106,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Akademiska sjukhuset
 	
 	</td>
 </tr>
@@ -116,7 +114,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		220 000
 	
 	 kr</td>
 </tr>
@@ -124,7 +122,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+<!--  
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
     <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
@@ -134,7 +132,8 @@ border="0" usemap="#rubrik"></DIV>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
 <tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
+    <td colspan="2" >Delstudien som finansierats av Ekhagastiftelsen fick ställas in då enhet vid Akademiska sjukhuset där studien
+	skulle genomföras ska läggas ner. </td>
 </tr>
 </table>
 	  
