--- a/projekt/2019-73.html
+++ b/projekt/2019-73.html
@@ -33,8 +33,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
-
- |--Diarienummer--|
+2019-73
  
   </font></p></td>
 </tr>
@@ -60,7 +59,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Pesticide contamination: ensuring favourable environment for organic operators through EU legislative frameworks
 	
 	</td>
 </tr>
@@ -72,7 +71,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Joanna Wierzbicka	
 	
 	</td>
 </tr>
@@ -80,11 +79,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Rue du Commerce 124<br>
+		BE-1000 Bruxelles<br>
+		Belgien
 				
 	  </td>
 </tr>
@@ -92,7 +89,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+	joanna.wierzbicka@ifoam-eu.org
 	
 	</td>
 </tr>
@@ -100,7 +97,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+32(0)2 2805231
 	
 	</td>
 </tr>
@@ -108,7 +105,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		IFOAM EU
 	
 	</td>
 </tr>
@@ -116,7 +113,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		910 000
 	
 	 kr</td>
 </tr>
@@ -124,19 +121,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-73/2019-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
 	  
 
 
