--- a/projekt/2019-74.html
+++ b/projekt/2019-74.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+ 2019-74
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Genotyping of the USDA-NPGS Carrot Collection
 	
 	</td>
 </tr>
@@ -72,19 +72,18 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
 	
+	Irwin Goldman
 	</td>
 </tr>
 <tr>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Department of Horticulture<br>
+		1574 Linden Drive, Room 377<br>
+		Madison, WI 53706<br>
+		USA
 				
 	  </td>
 </tr>
@@ -92,15 +91,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
-	
+		ilgoldma@wisc.edu
 	</td>
 </tr>
 <tr>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+	+1 608 262 7781
 	
 	</td>
 </tr>
@@ -108,7 +106,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		University of Wisconsin-Madison
 	
 	</td>
 </tr>
@@ -116,7 +114,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		110 000
 	
 	 kr</td>
 </tr>
@@ -124,20 +122,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-74/2019-74PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
-	  
 
 
 
