--- a/projekt/2019-21.html
+++ b/projekt/2019-21.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2020-21
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Den mjuka massagens betydelse för patienter som vårdas inom intensivvård
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+Maria Henricson
+	
 	
 	</td>
 </tr>
@@ -80,11 +82,10 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Hälsohögskolan<br>
+		Avd för omvårdnad<br>
+		Box 1026<br>
+		551 11 Jönköping
 				
 	  </td>
 </tr>
@@ -92,7 +93,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		maria.henricson@ju.se
+
 	
 	</td>
 </tr>
@@ -100,7 +102,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		036-101244
+
 	
 	</td>
 </tr>
@@ -108,7 +111,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Jönköpings universitet
+
 	
 	</td>
 </tr>
@@ -116,7 +120,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 100 000
 	
 	 kr</td>
 </tr>
@@ -124,19 +128,15 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-21/2019-21PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
+
 	  
 
 
