--- a/projekt/2019-29.html
+++ b/projekt/2019-29.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2019-29
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Arbuskulär mykorrhiza för Striga-kontroll i småskaligt jordbruk
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Sigrun Dahlin
+
 	
 	</td>
 </tr>
@@ -80,10 +82,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  	Institutionen för mark och miljö<br>
+		Box 7014<br>
+		750 07 Uppsala
 				
 				
 	  </td>
@@ -92,7 +93,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		Sigrun.Dahlin@slu.se
 	
 	</td>
 </tr>
@@ -100,7 +101,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		070-6712299
 	
 	</td>
 </tr>
@@ -108,7 +109,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Sveriges lantbruksuniversitet
 	
 	</td>
 </tr>
@@ -116,7 +117,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		770 000
 	
 	 kr</td>
 </tr>
@@ -124,20 +125,13 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-29/2019-29PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
-</table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
 </table>
-	  
 
 
 
