--- a/projekt/2019-79.html
+++ b/projekt/2019-79.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2019-79
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+Systems biology of COPD subgroups based on Western and Chinese diagnosis
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Herman van Wietmarschen
 	
 	</td>
 </tr>
@@ -80,19 +80,16 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
-				
+	  	Kosterijland 3-5<br>
+		NL-3981 AJ Bunnik<br>
+		Nederländerna
 	  </td>
 </tr>
 <tr>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		h.vanwietmarschen@louisbolk.nl
 	
 	</td>
 </tr>
@@ -100,7 +97,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+31 343 523860
 	
 	</td>
 </tr>
@@ -108,7 +105,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Louis Bolk Institute
 	
 	</td>
 </tr>
@@ -116,27 +113,21 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
-	
+		1 330 000
 	 kr</td>
 </tr>
 <tr>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--
+
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2019-79/2019-79PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
 	  
 
 
