--- a/projekt/2014-64.html
+++ b/projekt/2014-64.html
@@ -127,19 +127,25 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
+
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2014-64/2014-64PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-64/2014-64AR2015.pdf">&Aring;rsredovisning 2015</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-64/2014-64PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-64/2014-64Rapport.pdf">Vetenskaplig rapport</a></td>
+</tr>
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
 	  
 
 
