--- a/projekt/2014-69.html
+++ b/projekt/2014-69.html
@@ -128,19 +128,46 @@ Innovativa klimatåtgärder i ekologisk produktion
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2014-69/2014-69PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69AR2015.pdf">&Aring;rsredovisning 2015</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69AR2016.pdf">&Aring;rsredovisning 2016</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69AR2017.pdf">&Aring;rsredovisning 2017</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69Rapport.pdf">Vetenskaplig rapport</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69Klimatsmart.pdf">Mot ett klimatsmart jordbruk - Socioekonomiska strategier</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69Manual1.pdf">Praktisk manual om klimatsmarta metoder på din g&aring;rd - Del 1</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2014-69/2014-69Manual2.pdf">Praktisk manual om klimatsmarta metoder på din g&aring;rd - Del 2</a></td>
+</tr>
 </table>
 
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
-<tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
-</tr>
-</table>
+
 	  
 
 
