--- a/projekt/2015-11.html
+++ b/projekt/2015-11.html
@@ -125,17 +125,21 @@ Sölvegatan 37<br>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2015-11/2015-11PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
 </tr>
--->
-</table>
-
-<table cellspacing="2" cellpadding="2" border="0" class=artikel>
 <tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
+	<td></td>
+	<td class=bp-col2><a href="2015-11/2015-11PVSHalfTimeReport.pdf">Half time report</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2015-11/2015-11PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td class=bp-col2><a href="2015-11/2015-11Rapport.pdf">Vetenskaplig rapport</a></td>
 </tr>
 </table>
 	  
