Lite uppdateringar våren 2020

--- a/vr/index.html
+++ b/vr/index.html
@@ -38,17 +38,17 @@ tr:nth-child(even) {
 <tr>
 	<td>&Aring;rets ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2019.html">L&auml;nk till ans&ouml;kningarna</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2020.html">L&auml;nk till ans&ouml;kningarna</a></td>
 </tr>
 <tr>
-	<td>F&ouml;rdelning av ans&ouml;kningar  - version 2 2019-08-13  </td>
+	<td>F&ouml;rdelning av ans&ouml;kningar  - version 1 2020-06-17  </td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2019-2.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2020-1.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Instruktioner f&ouml;r utv&auml;rderingen</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2019.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2020.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Torkels beskrivning av arbetsmetodik</td>
@@ -56,9 +56,9 @@ tr:nth-child(even) {
 	<td><a href="http://www.ekhagastiftelsen.se/vr/Arbetsmetodik VR 2.3.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
-	<td>Mall f&ouml;r utl&aring;tandetexter</td>
+	<td>Mall f&ouml;r po&auml;ngs&auml;ttning</td>
 	<td>ladda ner och fyll i dina bed&ouml;mningar</td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2019.xlsx">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2020.xlsx">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Styrelsens beskrivning av &auml;ndam&aring;l, inrikting och relevans</td>
@@ -73,12 +73,12 @@ tr:nth-child(even) {
 <tr>
 	<td>Sammanst&auml;llning &ouml;ver alla ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2019.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2020.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
-	<td>Mail/Brev till VR juni 2019</td>
+	<td>Mail/Brev till VR juni 2020</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VR190619.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VR200618.pdf">L&auml;nk till dokument</a></td>
 </tr>
 
 </table>
@@ -86,6 +86,21 @@ tr:nth-child(even) {
   
 <h3>Tidigare &aring;rs utl&aring;tanden och ans&ouml;kningar</h3>  
 <table>
+<tr>
+	<td>2019</td>
+	<td>VR utl&aring;tande september 2019</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Utlatande2019.pdf">L&auml;nk till dokument</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td>VR utl&aring;tande lista </td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Utlatande2019Excel.pdf">L&auml;nk till dokument</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td>Alla ans&ouml;kningsdokument</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2019.html">L&auml;nk till dokument</a></td>
+</tr>
 <tr>
 	<td>2018</td>
 	<td>VR utl&aring;tande september 2018</td>
